<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="E_LogLevel" Id="{e9ef3f0e-04e3-403f-951a-2d9811693c12}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE E_LogLevel :
(
    Debug := 0,
    Info  := 1,
    Warn  := 2,
    Error := 3,
    Fatal := 4
);
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>