<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_LogMessage" Id="{56bff33d-8470-42da-bea5-9559cbe6e709}">
    <Declaration><![CDATA[TYPE ST_LogMessage :
STRUCT
	eLogLevel:			E_LogLevel;
	nID:				UDINT;
	nTimestamp:			DT;	
	sSource:			STRING(255);
	sMessage:			STRING(255);
	sDefault:			STRING(255);
	sArguments:			STRING(255);
	bActive:			BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>