<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_Logging" Id="{f3c6275a-64fe-47c7-8398-c8b4638ef175}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Logging IMPLEMENTS I_Logger
VAR_INPUT
	eLogLevel:				E_LogLevel:= E_LogLevel.Debug;
END_VAR
VAR_OUTPUT
END_VAR
VAR
	aMessages:				ARRAY[0..99] OF ST_LogMessage; // The array to store messages
    nMessages:				UINT := 0;                     // The current count of messages in the array
	nIndex: 				UINT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[nIndex := 0;
WHILE nIndex < nMessages DO
	IF aMessages[nIndex].bActive THEN
		aMessages[nIndex].bActive:= FALSE;
		nIndex := nIndex + 1;
	ELSE
        MEMMOVE(ADR(aMessages[nIndex]), ADR(aMessages[nIndex + 1]), SIZEOF(ST_LogMessage) * (nMessages - nIndex));
        nMessages := nMessages - 1;
    END_IF
END_WHILE]]></ST>
    </Implementation>
    <Method Name="M_Log" Id="{ced7a02e-e5d1-4f22-8859-d2eccf7c8c34}">
      <Declaration><![CDATA[METHOD PUBLIC M_Log : BOOL
VAR_INPUT
	eLogLevel:			E_LogLevel;
	nID:				UDINT;
	sSource:			STRING(255);
	sMessage:			STRING(255);
	sArguments:			STRING(255);
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[// IF THIS^.eLogLevel > eLogLevel THEN
// 	M_Log:= TRUE;
// 	RETURN;
// END_IF



// Find
FOR nIndex := 0 TO nMessages DO
    IF aMessages[nIndex].sMessage = sMessage AND_THEN aMessages[nIndex].sSource = sSource THEN
        aMessages[nIndex].bActive:= TRUE;
		M_Log := TRUE;
        RETURN;
    END_IF
END_FOR

// else Add
IF nMessages < 99 THEN
	nIndex := nMessages;
    aMessages[nMessages].eLogLevel:= 	eLogLevel;
    aMessages[nMessages].nID:=			nID;
    aMessages[nMessages].nTimestamp:=	ULINT_TO_UDINT(F_GetSystemTime() / 1000);
    aMessages[nMessages].sSource:=		sSource;
    aMessages[nMessages].sMessage:=		sMessage;
	aMessages[nMessages].sDefault:=		F_Format(sMessage, sArguments);
    aMessages[nMessages].sArguments:=	sArguments;
	aMessages[nMessages].bActive:=		TRUE;
    nMessages := nMessages + 1;
	M_Log := TRUE;
END_IF]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>