<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_Logger" Id="{24e84e8b-19c0-4381-a1e9-ba01ff2711b8}" SpecialFunc="None">
    <Declaration><![CDATA[{attribute 'reflection'} 
FUNCTION_BLOCK FB_Logger
VAR_INPUT
	iLogger:			I_Logger;
END_VAR
VAR_OUTPUT
END_VAR
VAR
    {attribute 'instance-path'} 
    {attribute 'noinit'} 
    sInstancePath:				STRING(255); 
	sArguments:					STRING(255); 
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="FB_Init" Id="{334f028f-5e57-4c30-9ad1-974a7aa5caf6}">
      <Declaration><![CDATA[//FB_Init ist immer implizit verfügbar und wird primär für die Initialisierung verwendet.
//Der Rückgabewert wird nicht ausgewertet. Für gezielte Einflussnahme können Sie
//die Methoden explizit deklarieren und darin mit dem Standard-Initialisierungscode 
//zusätzlichen Code bereitstellen. Sie können den Rückgabewert auswerten.
METHOD FB_Init: BOOL
VAR_INPUT    
bInitRetains: BOOL; // TRUE: Die Retain-Variablen werden initialisiert (Reset warm / Reset kalt)    
bInCopyCode: BOOL;  // TRUE: Die Instanz wird danach in den Kopiercode kopiert (Online-Change)
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[sInstancePath:= F_InstancePath(sInstancePath);]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_Debug" Id="{de67a697-7e72-4e4b-b32b-4b561494e424}">
      <Declaration><![CDATA[METHOD PUBLIC M_Debug : BOOL
VAR_INPUT
	sMessage:			STRING(255);
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF iLogger = 0 THEN
	RETURN;
END_IF

iLogger.M_Log(E_LogLevel.Debug, 0, sInstancePath, sMessage, sArguments);]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_Error" Id="{ff42a88a-8912-4d2c-af88-2d59a6d8da27}">
      <Declaration><![CDATA[METHOD PUBLIC M_Error : BOOL
VAR_INPUT
	nID:				UDINT;
	sMessage:			STRING(255);
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF iLogger = 0 THEN
	RETURN;
END_IF

iLogger.M_Log(E_LogLevel.Error, nID, sInstancePath, sMessage, sArguments);]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_Fatal" Id="{accc1bfb-8e8e-4805-9e0b-d8677c60b196}">
      <Declaration><![CDATA[METHOD PUBLIC M_Fatal : BOOL
VAR_INPUT
	nID:				UDINT;
	sMessage:			STRING(255);
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF iLogger = 0 THEN
	RETURN;
END_IF

iLogger.M_Log(E_LogLevel.Fatal, nID, sInstancePath, sMessage, sArguments);]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_Info" Id="{2ea5a01b-eb1e-4166-8c91-90bf5bd9cfc5}">
      <Declaration><![CDATA[METHOD PUBLIC M_Info : BOOL
VAR_INPUT
	nID:				UDINT;
	sMessage:			STRING(255);
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF iLogger = 0 THEN
	RETURN;
END_IF

iLogger.M_Log(E_LogLevel.Info, nID, sInstancePath, sMessage, sArguments);]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_Warn" Id="{a6eef191-b99b-4a50-95aa-3b8f792c1e41}">
      <Declaration><![CDATA[METHOD PUBLIC M_Warn : BOOL
VAR_INPUT
	nID:				UDINT;
	sMessage:			STRING(255);
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF iLogger = 0 THEN
	RETURN;
END_IF

iLogger.M_Log(E_LogLevel.Warn, nID, sInstancePath, sMessage, sArguments);]]></ST>
      </Implementation>
    </Method>
    <Property Name="P_Logger" Id="{134e0ae4-88be-4cc8-992b-473aa00879c7}">
      <Declaration><![CDATA[PROPERTY PUBLIC P_Logger : I_Logger]]></Declaration>
      <Get Name="Get" Id="{b32f6a48-3497-4aba-b41b-4cc92ef6b6d2}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[P_Logger:= iLogger;]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{9409cdd8-94a3-49af-847c-401ba81bb0f1}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[iLogger:= P_Logger;]]></ST>
        </Implementation>
      </Set>
    </Property>
  </POU>
</TcPlcObject>